--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "server-start": "nodemon src/server/index.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.4",
     "@faker-js/faker": "^8.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "graphql": "^16.8.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
