--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server-start": "nodemon src/server/index.js"
+    "server-start": "nodemon src/server/index.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.9.4",
@@ -17,7 +17,9 @@
     "graphql": "^16.8.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tsx": "^4.4.0",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
