--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "api",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "tapi",
+  "version": "1.0.0",
+  "description": "tapi project",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "server-start": "nodemon src/server/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "swagger-autogen": "^2.23.7",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.4",
-    "@faker-js/faker": "^8.1.0",
+    "@faker-js/faker": "^8.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "nodemon": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tsx": "^4.4.0",
-    "typescript": "^5.3.2"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.1.0"
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
